# apohara-aegis

./: .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
apohara_aegis/: __init__.py  compliance.py  defense_chain.py  djl.py  gemini_judge.py  health_profile.py  inv15_gate.py  multi_judge.py  mythos_slot.py  nist_mapping.py  nvidia_defenses.py  opencode_zen_adapters.py  openrouter_adapters.py  owasp_regex.py  policy_loader.py  simulator.py  smolagents_integration.py  soar_pipeline.py  taxonomy.py  templates.py  verdict_combine.py
assets/: aegis-pitch-deck.md  inv15-governance-dashboard.html
configs/: lobstertrap_policy.yaml  sprint5_5agent.yaml
deploy/: Caddyfile  Dockerfile.lobstertrap  README.md  cloud-init.yaml  docker-compose.yml  vultr_provision.py
docs/: lobstertrap-integration.md  threat-model.md
examples/: aegis_smolagents_demo.py
integrations/: .gitignore
integrations/apohara-crewai/: README.md  pyproject.toml
integrations/apohara-crewai/apohara_crewai/: __init__.py  tool_wrapper.py
integrations/apohara-crewai/examples/: hello_world.py
integrations/apohara-crewai/tests/: test_wrapper.py
integrations/apohara-langchain/: README.md  pyproject.toml
integrations/apohara-langchain/apohara_langchain/: __init__.py  callback.py
integrations/apohara-langchain/examples/: hello_world.py
integrations/apohara-langchain/tests/: test_callback.py
logs/: bakeoff_day4_20260515T201928Z.json  bakeoff_day4_table_20260515T201928Z.md  bakeoff_jbb_20260515T1800Z.json  bakeoff_table.md  baseline_aegis-ensemble-10frontier_day4_20260515T182434Z.json  baseline_aegis-ensemble-10frontier_day4_RERUN_20260515T194716Z.json  baseline_aegis-ensemble-10frontier_day5_FALLBACK_20260515T212737Z.json  baseline_aegis-ensemble_20260515T1500Z.json  baseline_aegis-single-gemini_20260515T1500Z.json  baseline_claude-opus-4.7_20260515T1500Z.json  baseline_claude-opus-4.7_day4_RERUN_20260515T191029Z.json  baseline_gemini-3.1-pro_20260515T1500Z.json  baseline_gpt-5.5_20260515T1500Z.json  baseline_groq-gpt-oss-safeguard_20260515T1700Z.json  baseline_groq-gpt-oss-safeguard_day4_RERUN_20260515T191029Z.json  baseline_groq-llama-prompt-guard_20260515T1700Z.json  baseline_groq-llama-prompt-guard_day4_RERUN_20260515T191029Z.json  baseline_minimax-m2.7_20260515T1500Z.json  baseline_minimax-m2.7_day4_RERUN_20260515T191029Z.json  baseline_nvidia-llama-guard-4-12b_20260515T1500Z.json  baseline_nvidia-nemoguard-content-safety-8b_20260515T1500Z.json  baseline_nvidia-nemotron-content-safety-reasoning-4b_20260515T1500Z.json  baseline_nvidia-nemotron-content-safety-reasoning-4b_REBUILT_20260515T174951Z.json  baseline_opencode-zen-big-pickle_day4_20260515T182434Z.json  baseline_openrouter-bonus-deepseek-r1_day4_20260515T195029Z.json  baseline_openrouter-bonus-deepseek-v4-flash_day4_20260515T191029Z.json  baseline_openrouter-bonus-mistral-medium-3_day4_20260515T191029Z.json  baseline_openrouter-deepseek-v4-pro_day4_20260515T182434Z.json  baseline_openrouter-deepseek-v4-pro_day4_RERUN_20260515T191029Z.json  baseline_openrouter-glm-5.1_day4_20260515T182434Z.json  baseline_openrouter-glm-5.1_day4_RERUN_20260515T191029Z.json  baseline_openrouter-kimi-k2.6_day4_20260515T182434Z.json  baseline_openrouter-kimi-k2.6_day4_RERUN_20260515T191029Z.json  baseline_openrouter-nemotron-3-super-120b_day4_20260515T182434Z.json  baseline_openrouter-nemotron-3-super-120b_day4_RERUN_20260515T191029Z.json  baseline_openrouter-qwen3.6-plus_day4_20260515T182434Z.json  baseline_openrouter-qwen3.6-plus_day4_RERUN_20260515T191029Z.json  deploy_smoke_20260514T221341Z.json  deploy_smoke_day4_20260515T190909Z.json  djl_latency.json  (+16 more)
policy-pack/: Makefile  README.md  VERSION  install.sh  threat-model-summary.md
scripts/: _sprint5_pipeline.py  aegis_single_gemini_from_phase2.py  bakeoff_compare.py  bakeoff_day4_compare.py  bakeoff_day5_compare.py  calibrate_jbb.py  deploy_smoke_day4.py  fill_day5_placeholders.py  generate_aegis_cover.py  generate_governance_dashboard.py  granite4_jbb_n80.py  granite4_probe.py  jbb_live_defense.py  openrouter_5frontier_smoke.py  recursive_redteam.py  run_baselines.py  run_bonus_baseline.py  run_ensemble_with_timeout.py  run_harmbench_subset.py  sprint5_5agent_workload.py  sprint5_head_to_head.py
tests/: test_aegis_smolagents.py  test_agent_health.py  test_compliance.py  test_defense_chain.py  test_djl_latency.py  test_djl_rules.py  test_ensemble.py  test_fallback_adapter.py  test_gemini_judge.py  test_incident_taxonomy.py  test_industry_templates.py  test_lifecycle_latency.py  test_lobstertrap_integration.py  test_multi_judge.py  test_mythos_slot.py  test_nist_mapping.py  test_opencode_zen_adapters.py  test_openrouter_adapters.py  (+6 more)
