[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Restrict package discovery to the actual library directory so
# setuptools auto-discovery does not flatten ``tests/`` / ``scripts/``
# / ``configs/`` into the wheel and crash with the multi-top-level
# error. Phase-3 priority A install probe (2026-05-18) surfaced the
# missing block — adding it enables ``pip install
# git+https://...apohara-aegis@main`` to succeed.
include = ["apohara_aegis*"]

[project]
name = "apohara-aegis"
version = "0.1.0"
description = "Apohara Aegis — defense-in-depth trust layer for multi-agent LLM workflows. Veea Lobster Trap (perimeter) + Apohara INV-15 (behavioral)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pablo M. Suarez", email = "suarezpm@csnat.unt.edu.ar" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/SuarezPM/apohara-aegis"
"Upstream engine (Apohara Context Forge)" = "https://github.com/SuarezPM/Apohara_Context_Forge"
"Paper (Zenodo DOI)" = "https://doi.org/10.5281/zenodo.20114594"
"Lobster Trap (Veea)" = "https://github.com/veeainc/lobstertrap"

[project.optional-dependencies]
# HuggingFace smolagents integration (Innovation E). Optional because
# Aegis can also be used standalone as an INV-15 scorer + policy loader.
smolagents = ["smolagents>=1.0,<2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit a real external API (Gemini AI Studio / Vertex). Auto-skipped when GEMINI_API_KEY is not set.",
]
